fixed contact icon zindex and fixed overflow scroll

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,19 @@
   background: #1a1919;
 }
 
+*::-webkit-scrollbar {
+  width: 2px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #808080;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  border: 3px solid #1a1919;
+}
+
 .contact-icons a:hover {
   transform: scale(1.1);
   box-shadow: 1px 1px 3px #111922;
